2011-01-26  Ethan A Merritt  <merritt@u.washington.edu>

	* term/emf.trm (EMF_filled_polygon): Explicitly set a zero-width
	same-color border for filled polygons, otherwise it inherits a border
	line style.
	Bug #3165902

2011-01-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_encoding): Check result of "set encoding locale"
	to see if we have just loaded an sjis (codepage 932) locale.

2011-01-25  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/term.c src/term_api.h term/post.trm term/svg.trm NEWS
	docs/gnuplot.doc:
	"set encoding sjis" allows characters in Shift-JIS Japanese encoding to
	survive enhanced text processing by the postscript and svg terminals.

2011-01-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (xtick_callback ytick_callback ztick_callbacke):
	Revert change made 2011-01-20 because it breaks hidden3d.

	* src/util3d.c (map3d_xy_double):  Instead revise the map3d_xy() code
	path to share the coordinate transformation used by map3d_xyz().
	Bug #3157712

2011-01-22  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/win/wgraph.c:  Fix typo in previous definition of _WIN32_WINNT.

2011-01-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_boxplot):  Handle some corner cases
	(all points have the same value, fewer than 4 valid points).
	Bug #3162872

2011-01-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (xtick_callback ytick_callback ztick_callbacke):
	Gnuplot uses two different pathways to convert 3D coordinates in user
	space into 2D coordinates in the terminal coordinate space.  One of
	these goes via map3d_xyz() and TERMCOORD(); the other uses map3d_xy().
	Unfortunately it seems the two paths can differ by +/- one pixel in the
	final terminal coordinates.  This discrepancy is particularly
	noticeable in the grid and axis tic placement of 3D plots after
	"set view map" (Bug #3157712).
	This patch switches the tick_callback() routines to use the map3d_xy()